--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 NVIDIA-OptiX-SDK-7.2.0-linux64-x86_64.sh filter=lfs diff=lfs merge=lfs -text
+ray-tracing/external.zip filter=lfs diff=lfs merge=lfs -text
+ray-tracing/HDRs.zip filter=lfs diff=lfs merge=lfs -text
+ray-tracing/libs.zip filter=lfs diff=lfs merge=lfs -text
+ray-tracing/NVIDIA-OptiX-SDK-7.2.0-linux64-x86_64.sh filter=lfs diff=lfs merge=lfs -text
